Started work on the rule process engine and messing around with the stub of the api
